# bpmn-parser

./: .dockerignore  .gitignore  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: debug.yaml  docs.yaml  publish.yaml  tests.yaml
bpmn_parser/: __init__.py  __main__.py  _exclusive_gateway.py  _intermediate_catch_event.py  _sequence_flow.py  _service_task.py  _task.py  _user_task.py  base.py  exceptions.py  exclusive_gateway.py  intermediate_catch_event.py  parser.py  sequence_flow.py  service_task.py  settings.py  task.py  user_task.py
docs/: bpmn_parser.md  exclusive_gateway.md  index.md  intermediate_catch_event.md  sequence_flow.md  service_task.md  task.md  user_task.md
resources/: flow.bpmn
tests/: conftest.py  test_example.py  test_exclusive_gateway.py  test_intermediate_catch_event.py  test_parser.py  test_sequence_flow.py  test_service_task.py  test_task.py  test_user_task.py
user_task/: index.html
