[tool.poetry]
name = "bpmn_parser"
version = "0.1.0"
description = "A simple BPMN Parser implemented in Python"
authors = ["Daniel Bailo <danbailoufms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.3.0"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.2.2"
ruff = "^0.4.8"
mypy = "^1.10.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.15.0"
coverage-badge = "^1.1.1"
mypy-extensions = "^1.0.0"

[tool.coverage.report]
skip_empty = true
show_missing = true
omit = [
    "*main*",
]
sort="Cover"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "F", "T100"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.mypy]
disable_error_code = [
    "union-attr", "arg-type",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
