[tool.poetry]
name = "bpmn_parser"
version = "1.0.8"
description = "A simple BPMN Parser implemented in Python"
authors = ["Daniel Bailo <danbailoufms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.2.2"
ruff = "^0.4.8"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"
mypy-extensions = "^1.0.0"
lxml-stubs = "^0.5.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = {extras = ["imaging"], version = "^9.5.33"}
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}

[tool.coverage.report]
skip_empty = true
show_missing = true
sort="Cover"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "F", "T100"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.mypy]
disable_error_code = [
    "union-attr", "arg-type",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
